# RCOM-Lab1

./: CMakeLists.txt  README.md
LAB1/: link_layer.c
LAB1/src/: application_layer.c  link_layer.c  serial_port.c
